@@ -1,16 +1,16 @@
 package com.now.naaga.game.application;
 
-import com.now.naaga.game.application.dto.CreateGameCommand;
-import com.now.naaga.game.application.dto.EndGameCommand;
-import com.now.naaga.game.application.dto.FindAllGamesCommand;
-import com.now.naaga.game.application.dto.FindGameByIdCommand;
-import com.now.naaga.game.application.dto.FindGameByStatusCommand;
+import com.now.naaga.game.application.dto.*;
 import com.now.naaga.game.domain.*;
-import com.now.naaga.game.domain.gamescore.GameScoreCalculator;
 import com.now.naaga.game.exception.GameException;
-import com.now.naaga.game.exception.GameNotArrivalException;
+import com.now.naaga.game.exception.GameNotFinishedException;
 import com.now.naaga.game.repository.GameRepository;
-import com.now.naaga.game.repository.GameResultRepository;
+
+// TODO: 8/31/23 제거할 대상 - 이슈 범위를 벗어나서 일단은 제거하지 않음
+import com.now.naaga.gameresult.domain.GameResult;
+import com.now.naaga.gameresult.exception.GameResultException;
+import com.now.naaga.gameresult.repository.GameResultRepository;
+
 import com.now.naaga.place.application.PlaceService;
 import com.now.naaga.place.application.dto.RecommendPlaceCommand;
 import com.now.naaga.place.domain.Place;
@@ -19,7 +19,6 @@ import com.now.naaga.place.exception.PlaceException;
 import com.now.naaga.player.application.PlayerService;
 import com.now.naaga.player.domain.Player;
 import com.now.naaga.player.presentation.dto.PlayerRequest;
-import com.now.naaga.score.domain.Score;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -28,30 +27,34 @@ import java.util.stream.Collectors;
 
 import static com.now.naaga.game.exception.GameExceptionType.*;
 
+// TODO: 8/31/23 제거할 대상 - 이슈 범위를 벗어나서 일단은 제거하지 않음
+import static com.now.naaga.gameresult.exception.GameResultExceptionType.GAME_RESULT_NOT_EXIST;
+
 @Transactional
 @Service
 public class GameService {
 
     private final GameRepository gameRepository;
 
+    // TODO: 8/31/23 제거할 대상 - 이슈 범위를 벗어나서 일단은 제거하지 않음
     private final GameResultRepository gameResultRepository;
 
     private final PlayerService playerService;
 
     private final PlaceService placeService;
 
-    private final GameScoreCalculator gameScoreCalculator;
+    private final GameFinishService gameFinishService;
 
     public GameService(final GameRepository gameRepository,
-            final GameResultRepository gameResultRepository,
-            final PlayerService playerService,
-            final PlaceService placeService,
-            final GameScoreCalculator gameScoreCalculator) {
+                       final GameResultRepository gameResultRepository,
+                       final PlayerService playerService,
+                       final PlaceService placeService,
+                       final GameFinishService gameFinishService) {
         this.gameRepository = gameRepository;
         this.gameResultRepository = gameResultRepository;
         this.playerService = playerService;
         this.placeService = placeService;
-        this.gameScoreCalculator = gameScoreCalculator;
+        this.gameFinishService = gameFinishService;
     }
 
     public Game createGame(final CreateGameCommand createGameCommand) {
@@ -72,16 +75,19 @@ public class GameService {
         }
     }
 
-    @Transactional(noRollbackFor = {GameNotArrivalException.class})
+    @Transactional(noRollbackFor = {GameNotFinishedException.class})
     public void endGame(final EndGameCommand endGameCommand) {
-        final Game game = gameRepository.findById(endGameCommand.gameId())
-                .orElseThrow(() -> new GameException(NOT_EXIST));
+        final Game game = gameRepository.findById(endGameCommand.gameId()).orElseThrow(() -> new GameException(NOT_EXIST));
         final Player player = playerService.findPlayerById(endGameCommand.playerId());
         game.validateOwner(player);
-        final ResultType resultType = game.endGame(endGameCommand.endType(), endGameCommand.position());
-        final Score score = gameScoreCalculator.calculate(game, resultType);
-        player.addScore(score);
-        gameResultRepository.save(new GameResult(resultType, score, game));
+
+        final EndType endType = endGameCommand.endType();
+        final Position position = endGameCommand.position();
+
+        game.endGame(position, endType);
+
+        final CreateGameResultCommand createGameResultCommand = new CreateGameResultCommand(player, game, position, endType);
+        gameFinishService.createGameResult(createGameResultCommand);
     }
 
     @Transactional(readOnly = true)
@@ -104,7 +110,7 @@ public class GameService {
         final List<GameResult> gameResultsByGameId = gameResultRepository.findByGameId(gameId);
 
         if (gameResultsByGameId.isEmpty()) {
-            throw new GameException(GAME_RESULT_NOT_EXIST);
+            throw new GameResultException(GAME_RESULT_NOT_EXIST);
         }
 
         return gameResultsByGameId.get(0);
@@ -118,24 +124,21 @@ public class GameService {
 
     @Transactional(readOnly = true)
     public List<GameRecord> findAllGameResult(final PlayerRequest playerRequest) {
-        final List<Game> gamesByPlayerId = gameRepository.findByPlayerId(playerRequest.playerId());
-        final List<GameResult> gameResults = gamesByPlayerId.stream()
-                .map(game -> findGameResultByGameId(game.getId()))
+        final Long playerId = playerRequest.playerId();
+        final List<GameResult> gameResults = gameResultRepository.findByPlayerId(playerId);
+
+        final List<GameResult> sortedGameResults = gameResults.stream()
                 .sorted((gr1, gr2) -> gr2.getCreatedAt().compareTo(gr1.getCreatedAt()))
                 .toList();
 
-        return gameResults.stream()
+        return sortedGameResults.stream()
                 .map(GameRecord::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public Statistic findStatistic(final PlayerRequest playerRequest) {
-        final List<Game> gamesByPlayerId = gameRepository.findByPlayerIdAndGameStatus(playerRequest.playerId(),
-                GameStatus.DONE);
-        final List<GameResult> gameResults = gamesByPlayerId.stream()
-                .map(game -> findGameResultByGameId(game.getId()))
-                .toList();
+        final List<GameResult> gameResults = gameResultRepository.findByPlayerId(playerRequest.playerId());
         final List<GameRecord> gameRecords = gameResults.stream()
                 .map(GameRecord::from).toList();
 
